# AutoPredict-Pipeline

./: .dockerignore  .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  dvc.yaml  fly.toml  pyproject.toml
.dvc/: config
.github/workflows/: cd.yml  ci.yml  scheduled-retrain.yml
configs/: config.yaml  model.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: architecture.md  mlops.md
notebooks/: 01_exploratory_analysis.ipynb
src/autopredict/: __init__.py  cli.py
src/autopredict/api/: __init__.py  dependencies.py  main.py  middleware.py  schemas.py
src/autopredict/api/routes/: health.py  predict.py
src/autopredict/config/: __init__.py  settings.py
src/autopredict/core/: __init__.py  entities.py  enums.py  exceptions.py  ports.py
src/autopredict/deployment/: __init__.py  model_store.py  predictor.py
src/autopredict/evaluation/: __init__.py  gate.py  metrics.py  mlflow_registry.py
src/autopredict/features/: __init__.py  pipeline.py  technical_indicators.py
src/autopredict/ingestion/: __init__.py  collector.py  repository.py  validation.py
src/autopredict/ingestion/providers/: __init__.py  binance.py  coingecko.py  fear_greed.py  http.py
src/autopredict/monitoring/: __init__.py  drift.py  logging_config.py  metrics.py
src/autopredict/orchestration/: __init__.py  factory.py  flows.py  pipeline.py
src/autopredict/training/: __init__.py  dataset.py  model_factory.py  trainer.py
tests/: conftest.py
tests/unit/: test_api.py  test_collector.py  test_features.py  test_gate.py  test_technical_indicators.py  test_trainer_and_predictor.py  test_validation.py
