[project]
name = "autopredict"
version = "0.1.0"
description = "Automated MLOps platform that ingests crypto market data, trains models, gates promotions, deploys a FastAPI service and monitors data drift."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Munhoz", email = "juanmunhoz@outlook.com" }]
keywords = ["mlops", "machine-learning", "crypto", "fastapi", "mlflow", "prefect"]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "httpx>=0.27",
    "tenacity>=8.4",
    "structlog>=24.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
]
tracking = [
    "mlflow>=2.14",
]
orchestration = [
    "prefect>=2.19",
]
monitoring = [
    "evidently>=0.7,<0.8",
]
data = [
    "dvc[s3]>=3.51",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "types-pyyaml>=6.0",
    "pre-commit>=3.7",
]

[project.scripts]
autopredict = "autopredict.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autopredict"]

# ------------------------------------------------------------------------------
# Ruff — linting + formatting
# ------------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "TID",           # tidy imports
    "PL",            # pylint
    "RUF",
]
ignore = ["PLR0913", "PLR2004", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["autopredict"]

# ------------------------------------------------------------------------------
# mypy — static typing
# ------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["lightgbm.*", "xgboost.*", "sklearn.*", "evidently.*", "mlflow.*", "prefect.*", "joblib.*"]
ignore_missing_imports = true

# ------------------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=autopredict --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that touch external services (skipped in CI by default)",
]

[tool.coverage.run]
branch = true
source = ["src/autopredict"]

[tool.coverage.report]
show_missing = true
skip_covered = true
